# dooly

./: .gitignore  Cargo.toml  README.md  Rocket.toml
.github/workflows/: rust_tests.yml
migrations/2024-10-15-034323_add_user_id_to_todos/: down.sql  up.sql
src/: db.rs  helpers.rs  lib.rs  main.rs  routes.rs  schema.rs  todos.rs  user.rs
tests/: add_todo.rs  cleanup.sql  complete_todo.rs  delete_todo.rs  get_todos.rs  search_todos.rs  seed.sql  update_todo.rs  user.rs
tests/insomnia/: api-test-collection.json
