[package]
name = "dooly"
version = "0.1.0"
authors = ["Jaken Herman <jakenherman7@gmail.com>"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.0", features = ["r2d2", "sqlite", "chrono"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }